--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
+    "@blockcerts/blockcerts-verifier": "^1.33.10",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6"
   },
