--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   },
   "dependencies": {
     "@blockcerts/blockcerts-verifier": "^1.33.10",
+    "@blockcerts/cert-verifier-js": "^4.5.0",
+    "@nuxtjs/dotenv": "^1.4.1",
+    "child_process": "^1.0.2",
     "core-js": "^3.6.5",
+    "fs": "0.0.1-security",
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
